ingress-nginx/helloapp/helloapp-ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: xiaoming.com
    http:
      paths:
      - backend:
          service:
            name: helloapp1-svc
            port:
              number: 8080
        path: /v1
        pathType: Prefix
      - backend:
          service:
            name: helloapp2-svc
            port:
              number: 8080
        path: /v2
        pathType: Prefix
